src/test/ui/issues/issue-52126-assign-op-invariance.nll.stderr
error[E0597]: `line` does not live long enough
  --> $DIR/issue-52126-assign-op-invariance.rs:44:28
   |
LL |         let v: Vec<&str> = line.split_whitespace().collect();
   |                            ^^^^ borrowed value does not live long enough
LL |         //~^ ERROR `line` does not live long enough
LL |         println!("accumulator before add_assign {:?}", acc.map);
   |                                                        ------- borrow used here in later iteration of loop
...
LL |     }
   |     - `line` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
